# Sea-SHINE

./: .gitignore  Dockerfile  README.md  README_orig.md  pyproject.toml  requirements.txt  shine_batch.py  shine_batch_sea.py  shine_incre.py
config/config_icra2023/: maicity_batch.yaml  ncd_batch.yaml
config/itlp_campus/: itlp_batch.yaml  itlp_batch_sea_shine.yaml
config/kitti/: kitti_batch.yaml  kitti_batch_sea_shine.yaml  kitti_incre_reg.yaml  kitti_incre_replay.yaml
config/kitti/aux/: kitti_batch_base_00_de_0.yaml  kitti_batch_base_00_de_01.yaml  kitti_batch_base_00_sem.yaml  kitti_batch_base_00_sem_c.yaml  kitti_batch_base_00_uniform.yaml  kitti_batch_base_00_uniform_c.yaml  kitti_batch_seaf_0_sem.yaml  kitti_batch_seaf_0_sem_c.yaml  kitti_batch_seaf_0_uniform.yaml  (+1 more)
config/kitti360/: kitti360_batch.yaml  kitti360_batch_sea_shine.yaml
config/maicity/: maicity_batch.yaml  maicity_incre_reg.yaml  maicity_incre_replay.yaml
config/ncd/: ncd_batch.yaml  ncd_incre_reg.yaml  ncd_incre_replay.yaml
config/rgbd/: rgbd_batch.yaml  rgbd_incre_reg.yaml  rgbd_incre_replay.yaml
dataset/: lidar_dataset.py  rgbd_to_kitti_format.py
eval/: __init__.py  crop_intersection.py  eval_samm.py  eval_utils.py  evaluator.py
model/: decoder.py  feature_octree.py
scripts/: convert_rgbd_to_kitti_format.sh  download_kitti_example.sh  download_maicity.sh  download_ncd_example.sh  download_neural_rgbd_data.sh
utils/: config.py  contours.py  data_sampler.py  incre_learning.py  labels.py  loss.py  mesher.py  pose.py  semantic_kitti_utils.py  tools.py  visualizer.py
(+52 files in other folders)
