[tool.poetry]
name = "semantic-shine"
version = "0.1.0"
description = ""
authors = ["Bezuglyj Vitaly <bevidm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.12.1"
torchvision = "0.13.1"
torchaudio = "0.12.1"
tqdm = "^4.66.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-image = "^0.22.0"
open3d = "^0.18.0"
natsort = "^8.4.0"
hydra-core = "^1.3.2"
fire = "^0.5.0"
loguru = "^0.7.2"
pyquaternion = "^0.9.9"
kaolin = { url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-1.12.1_cu116/kaolin-0.14.0-cp310-cp310-linux_x86_64.whl" }
pybind11 = "^2.11.1"
scikit-learn = "^1.4.1.post1"
addict = "^2.4.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
wandb = "^0.17.0"
chardet = "^5.2.0"
samm = { url = "https://s3.timeweb.cloud/05c27c56-2a3b87b0-029b-4cd5-9f9a-24e514ee51dc/samm-0.1.8-py3-none-any.whl" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
clearml = "^1.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
